--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <div class="navbar-brand">Utoble</div>
+      <a class="navbar-brand" href="/">Utoble</a>
     </div>
   </div>
 </div>
