Finished up the toble interface

--- a/views/pages/host.ejs
+++ b/views/pages/host.ejs
@@ -12,7 +12,7 @@
   </br></br></br>
     <div class="row">
     
-      <div id="subtitle" style="text-align:center">
+      <div id="subtitle">
         <h1>Host a Toble</h1>
       </div>
 
