--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,17 +10,14 @@
 
   <div class="container">
   </br></br></br>
-    <div class="row" style="text-align:center">
-      <h1>Utoble</h1>
-      <p class="lead">Democracy for YouTube</p>
-      <a class="btn btn-primary" href="/join">Join a Toble</a>
-      <a class="btn btn-primary" href="/host">Host a Toble</a>
-
+    <div class="row">
+      <div id="subtitle">
+        <h1>Utoble</h1>
+        <p class="lead">Democracy for YouTube</p>
+        <a class="btn btn-primary" href="/join">Join a Toble</a>
+        <a class="btn btn-primary" href="/host">Host a Toble</a>
+      </div>
     </div>
-
-
-
-
   </br></br></br>
   </div> <!-- /container -->
 
