--- a/views/pages/join.ejs
+++ b/views/pages/join.ejs
@@ -10,9 +10,9 @@
 
   <div class="container">
   </br></br></br>
-    <div class="row" style="text-align:center">
+    <div class="row">
 
-      <div id="subtitle" style="text-align:center">
+      <div id="subtitle">
         <h1>Join a Toble</h1>
       </div>
 
