Add button now adds the item to the queue

--- a/views/pages/toble.ejs
+++ b/views/pages/toble.ejs
@@ -86,6 +86,7 @@
   <% include ../partials/footer.ejs %>
   <link rel="stylesheet" type="text/css" href="/css/toble.css" />
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.1/js.cookie.min.js"></script>
   <script src="/js/toble.js"></script>
   <script src="https://apis.google.com/js/client.js?onload=initializeYoutubeAPI"></script>
 </body>
