Client now displays the current queue

--- a/views/pages/toble.ejs
+++ b/views/pages/toble.ejs
@@ -43,33 +43,35 @@
               </tr>
             </table>
           </div>
-          <div class="list-group-item clearfix">
-            The Beatles - Sexy Sadie
-            <button type="button" class="btn btn-sm upvote btn-primary">
-               Upvote
-            </button>
-            <span class="badge">4</span>
-          </div>
-          <div class="list-group-item">
-            Pixies - Here Comes Your Man
-            <span class="badge">2</span>
-            <button type="button" class="btn btn-sm upvote btn-info">
-               Upvoted
-            </button>
-          </div>
-          <div class="list-group-item">
-            Weezer - Buddy Holly
-            <span class="badge">1</span>
-            <button type="button" class="btn btn-sm upvote btn-primary">
-               Upvote
-            </button>
-          </div>
-          <div class="list-group-item">
-            Adele - Hello
-            <span class="badge">1</span>
-            <button type="button" class="btn btn-sm upvote btn-primary">
-               Upvote
-            </button>
+          <div id="queue">
+            <div class="list-group-item clearfix queueitem">
+              The Beatles - Sexy Sadie
+              <button type="button" class="btn btn-sm upvote btn-primary">
+                 Upvote
+              </button>
+              <span class="badge votecount">4</span>
+            </div>
+            <div class="list-group-item">
+              Pixies - Here Comes Your Man
+              <span class="badge">2</span>
+              <button type="button" class="btn btn-sm upvote btn-info">
+                 Upvoted
+              </button>
+            </div>
+            <div class="list-group-item">
+              Weezer - Buddy Holly
+              <span class="badge">1</span>
+              <button type="button" class="btn btn-sm upvote btn-primary">
+                 Upvote
+              </button>
+            </div>
+            <div class="list-group-item">
+              Adele - Hello
+              <span class="badge">1</span>
+              <button type="button" class="btn btn-sm upvote btn-primary">
+                 Upvote
+              </button>
+            </div>
           </div>
         </div>
       </div>
