--- a/views/pages/toble.ejs
+++ b/views/pages/toble.ejs
@@ -34,44 +34,17 @@
       <div class="col-md-6">
         <div class="list-group">
           <div class="list-group-item active" id="nowplaying">
-            <span class="badge">2</span>
+            <span class="badge votecount">?</span>
             <table style="width: auto;">
               <tr>
                 <td><i class="glyphicon glyphicon-play"></i></td>
-                <td>Now Playing: Radiohead - Present Tense</td>
+                <td class="title"></td>
                 <td></td>
               </tr>
             </table>
           </div>
           <div id="queue">
-            <div class="list-group-item clearfix queueitem">
-              The Beatles - Sexy Sadie
-              <button type="button" class="btn btn-sm upvote btn-primary">
-                 Upvote
-              </button>
-              <span class="badge votecount">4</span>
-            </div>
-            <div class="list-group-item">
-              Pixies - Here Comes Your Man
-              <span class="badge">2</span>
-              <button type="button" class="btn btn-sm upvote btn-info">
-                 Upvoted
-              </button>
-            </div>
-            <div class="list-group-item">
-              Weezer - Buddy Holly
-              <span class="badge">1</span>
-              <button type="button" class="btn btn-sm upvote btn-primary">
-                 Upvote
-              </button>
-            </div>
-            <div class="list-group-item">
-              Adele - Hello
-              <span class="badge">1</span>
-              <button type="button" class="btn btn-sm upvote btn-primary">
-                 Upvote
-              </button>
-            </div>
+
           </div>
         </div>
       </div>
