--- a/views/pages/host.ejs
+++ b/views/pages/host.ejs
@@ -22,8 +22,12 @@
       Send this link to your election officer:</br>
       <a href="/toble/<%= code%>/admin/<%= adminCode%>/">http://utoble.com/toble/<%= code%>/admin/<%= adminCode%>/</a></br></br>
 
-      Use this link to diplay the results:</br>
+      Main/Admin Only Screen:</br>
+      <a href="/toble/<%= code%>/screen/<%= adminCode%>/">http://utoble.com/toble/<%= code%>/screen/<%= adminCode%>/</a></br></br>
+
+      User Screen:</br>
       <a href="/toble/<%= code%>/screen/">http://utoble.com/toble/<%= code%>/screen/</a></br></br>
+
 
     </div>
 
