Auto generate host urls

--- a/views/pages/host.ejs
+++ b/views/pages/host.ejs
@@ -17,16 +17,16 @@
       </div>
 
       Send this link to your constituents:</br>
-      <a href="/toble/<%= code%>/">http://utoble.com/toble/<%= code%></a></br></br>
+      <a href="<%= url.toble%>"><%= url.toble%></a></br></br>
 
       Send this link to your election officer:</br>
-      <a href="/toble/<%= code%>/admin/<%= adminCode%>/">http://utoble.com/toble/<%= code%>/admin/<%= adminCode%>/</a></br></br>
+      <a href="<%= url.adminToble%>"><%= url.adminToble%></a></br></br>
 
       Main/Admin Only Screen:</br>
-      <a href="/toble/<%= code%>/screen/<%= adminCode%>/">http://utoble.com/toble/<%= code%>/screen/<%= adminCode%>/</a></br></br>
+      <a href="<%= url.mainScreen%>"><%= url.mainScreen%></a></br></br>
 
       User Screen:</br>
-      <a href="/toble/<%= code%>/screen/">http://utoble.com/toble/<%= code%>/screen/</a></br></br>
+      <a href="<%= url.userScreen%>"><%= url.userScreen%></a></br></br>
 
 
     </div>
