Hide player and show waiting message when no video is playing

--- a/views/pages/screen.ejs
+++ b/views/pages/screen.ejs
@@ -15,15 +15,17 @@
       <div id="subtitle">
         <h1><%= pageTitle%></h1>
         <h3>Toble Code: <%= code%></h3>
+        <div id="waitingmessage">
+          <br/><br/><br/><br/>
+          <h1>Waiting for next item...</h1>
+        </div>
       </div>
 
       <div class="embed-responsive embed-responsive-16by9">
-        <div id="player"></div>
+        <div id="player" style="display:none;"></div>
       </div>
+      
     </div>
-
-
-
 
   </br></br></br>
   </div> <!-- /container -->
