Renamed Utoble to Vidocracy

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,10 +12,10 @@
   </br></br></br>
     <div class="row">
       <div id="subtitle">
-        <h1>Utoble</h1>
+        <h1>Vidocracy</h1>
         <p class="lead">Democracy for YouTube</p>
-        <a class="btn btn-primary" href="/join">Join a Toble</a>
-        <a class="btn btn-primary" href="/host">Host a Toble</a>
+        <a class="btn btn-primary" href="/join">Join a Party</a>
+        <a class="btn btn-primary" href="/host">Host a Party</a>
       </div>
     </div>
   </br></br></br>
