--- a/views/pages/join.ejs
+++ b/views/pages/join.ejs
@@ -13,7 +13,7 @@
     <div class="row">
 
       <div id="subtitle">
-        <h1>Join a Toble</h1>
+        <h1>Join a Party</h1>
       </div>
 
     <div class="col-sm-4"></div>
@@ -21,9 +21,9 @@
     <div class="col-sm-4">
       </br>
       <div class="input-group">
-        <input type="text" class="form-control" id="join" placeholder="Enter the toble code">
+        <input type="text" class="form-control" id="join" placeholder="Enter the party code">
         <span class="input-group-btn">
-          <button class="btn btn-default" type="button" onclick="window.location.href = '/toble/' + $( '#join' ).val();">Join</button>
+          <button class="btn btn-default" type="button" onclick="window.location.href = '/party/' + $( '#join' ).val();">Join</button>
         </span>
       </div><!-- /input-group -->
     </div>
