--- a/views/pages/party.ejs
+++ b/views/pages/party.ejs
@@ -12,8 +12,8 @@
   </br></br></br>
     <div class="row">
       <div id="subtitle">
-        <h1>Your Toble</h1>
-        <h3>Toble Code: <%= code%></h3>
+        <h1>Your Party</h1>
+        <h3>Party Code: <%= code%></h3>
       </div></br>
       <div class="col-md-6">
         <div class="list-group">
@@ -51,13 +51,13 @@
     </div>
   </div> <!-- /container -->
   <div id="search-container"></div>
-  <div id="toblecode" style="display: none;"><%= code%></div>
+  <div id="partycode" style="display: none;"><%= code%></div>
   <div id="googleapikey" style="display: none;"><%= googleapikey%></div>
   <% include ../partials/footer.ejs %>
-  <link rel="stylesheet" type="text/css" href="/css/toble.css" />
+  <link rel="stylesheet" type="text/css" href="/css/party.css" />
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.1/js.cookie.min.js"></script>
-  <script src="/js/toble.js"></script>
+  <script src="/js/party.js"></script>
   <script src="https://apis.google.com/js/client.js?onload=initializeYoutubeAPI"></script>
 </body>
 </html>
