--- a/views/pages/screen.ejs
+++ b/views/pages/screen.ejs
@@ -14,7 +14,7 @@
     
       <div id="subtitle">
         <h1><%= pageTitle%></h1>
-        <h3>Toble Code: <%= code%></h3>
+        <h3>Party Code: <%= code%></h3>
         <div id="waitingmessage">
           <br/><br/><br/><br/>
           <h1>Waiting for next item...</h1>
@@ -30,7 +30,7 @@
   </br></br></br>
   </div> <!-- /container -->
 
-  <div id="toblecode" style="display: none;"><%= code%></div>
+  <div id="partycode" style="display: none;"><%= code%></div>
   <div id="admincode" style="display: none;"><%= admincode%></div>
   <div id="googleapikey" style="display: none;"><%= googleapikey%></div>
 
