--- a/views/pages/host.ejs
+++ b/views/pages/host.ejs
@@ -13,14 +13,14 @@
     <div class="row">
     
       <div id="subtitle">
-        <h1>Host a Toble</h1>
+        <h1>Host a Party</h1>
       </div>
 
       Send this link to your constituents:</br>
-      <a href="<%= url.toble%>"><%= url.toble%></a></br></br>
+      <a href="<%= url.party%>"><%= url.party%></a></br></br>
 
       Send this link to your election officer:</br>
-      <a href="<%= url.adminToble%>"><%= url.adminToble%></a></br></br>
+      <a href="<%= url.adminParty%>"><%= url.adminParty%></a></br></br>
 
       Main/Admin Only Screen:</br>
       <a href="<%= url.mainScreen%>"><%= url.mainScreen%></a></br></br>
