--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <div class="container">
-  Utoble by Tanner Krewson - <a href="https://github.com/tannerkrewson/utoble">View on Github</a>
+  Vidocracy by Tanner Krewson - <a href="https://github.com/tannerkrewson/vidocracy">View on Github</a>
 </div> <!-- /container -->
