--- a/views/pages/host.ejs
+++ b/views/pages/host.ejs
@@ -11,22 +11,22 @@
   <div class="container">
   </br></br></br>
     <div class="row">
-    
+
       <div id="subtitle">
         <h1>Host a Party</h1>
       </div>
 
       Send this link to your constituents:</br>
-      <a href="<%= url.party%>"><%= url.party%></a></br></br>
+      <a href="http://<%= url.party%>"><%= url.party%></a></br></br>
 
       Send this link to your election officer:</br>
-      <a href="<%= url.adminParty%>"><%= url.adminParty%></a></br></br>
+      <a href="http://<%= url.adminParty%>"><%= url.adminParty%></a></br></br>
 
       Main/Admin Only Screen:</br>
-      <a href="<%= url.mainScreen%>"><%= url.mainScreen%></a></br></br>
+      <a href="http://<%= url.mainScreen%>"><%= url.mainScreen%></a></br></br>
 
       User Screen:</br>
-      <a href="<%= url.userScreen%>"><%= url.userScreen%></a></br></br>
+      <a href="http://<%= url.userScreen%>"><%= url.userScreen%></a></br></br>
 
 
     </div>
