--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,10 +13,11 @@
     <div class="row">
       <div id="subtitle">
         <h1>Vidocracy</h1>
-        <p class="lead">Democracy for YouTube</p>
+        <p class="lead">Democracy for your party's YouTube videos</p>
         <a class="btn btn-primary" href="/join">Join a Party</a>
         <a class="btn btn-primary" href="/host">Host a Party</a>
       </div>
+
     </div>
   </br></br></br>
   </div> <!-- /container -->
