--- a/views/pages/join.ejs
+++ b/views/pages/join.ejs
@@ -18,14 +18,16 @@
 
     <div class="col-sm-4"></div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-4" style="text-align: center;">
       </br>
       <div class="input-group">
         <input type="text" class="form-control" id="join" placeholder="Enter the party code">
         <span class="input-group-btn">
-          <button class="btn btn-default" type="button" onclick="window.location.href = '/party/' + $( '#join' ).val();">Join</button>
+          <button class="btn btn-primary" type="button" onclick="window.location.href = '/party/' + $( '#join' ).val();">Join</button>
         </span>
       </div><!-- /input-group -->
+      <br/>
+      <a class="btn btn-default" href="/">Back to Vidocracy</a>
     </div>
 
     <div class="col-sm-4"></div>
