--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
 <div class="container">
-  Vidocracy by Tanner Krewson - <a href="https://github.com/tannerkrewson/vidocracy">View on Github</a>
+  Vidocracy by Tanner Krewson
+  <br/>
+  <a href="http://www.tannerkrewson.com/">www.tannerkrewson.com</a>
 </div> <!-- /container -->
