--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,17 @@
-<div class="container">
-  Vidocracy by Tanner Krewson
-  <br/>
-  <a href="http://www.tannerkrewson.com/">www.tannerkrewson.com</a>
-</div> <!-- /container -->
+<div class="container footer">
+  Vidocracy by
+  <a
+    href="https://www.tannerkrewson.com/"
+    target="_blank"
+    rel="noopener noreferrer"
+    >Tanner Krewson</a
+  >
+  <br />
+  <a
+    href="https://github.com/tannerkrewson/vidocracy"
+    target="_blank"
+    rel="noopener noreferrer"
+    >View on GitHub</a
+  >
+</div>
+<!-- /container -->
